--- a/test.ipynb
+++ b/test.ipynb
@@ -120,9 +120,10 @@
     "    parser = argparse.ArgumentParser()\n",
     "    parser.add_argument('--n_episodes', type=int, default=100, help='Number of episodes to train')\n",
     "    parser.add_argument('--state_dim', type=int, default=64, help='Dimension of states')\n",
-    "    parser.add_argument('--action_space', type=int, default=64, help='Dimension of states')\n",
+    "    parser.add_argument('--action_space', type=int, default=4096, help='Dimension of states')\n",
     "    parser.add_argument('--k_steps', type=int, default=5, help='Number of roll steps')\n",
     "    parser.add_argument('--n_simulations', type=int, default=800, help='Number of MCTS simulations')\n",
+    "    parser.add_argument('--max_game_length', type=int, default=1000, help='Maximum length of a game')\n",
     "    parser.add_argument('--c_puct', type=float, default=1.5, help='PUCT exploration constant')\n",
     "    parser.add_argument('--batch_size', type=int, default=8, help='Training batch size')\n",
     "    parser.add_argument('--learning_rate', type=float, default=1e-3, help='Learning rate')\n",
@@ -131,8 +132,7 @@
     "    parser.add_argument('--noise_alpha', type=float, default=0.3, help='Dirichlet noise alpha parameter (concentration)')\n",
     "    parser.add_argument('--noise_epsilon', type=float, default=0.25, help='Dirichlet noise epsilon parameter (mixing)')\n",
     "    parser.add_argument('--verbose', action='store_true', help=\"verbose output\")\n",
-    "    # args = parser.parse_args()\n",
-    "    args, unknown = parser.parse_known_args()\n",
+    "    args = parser.parse_args()\n",
     "    return args\n",
     "\n",
     "\n",
@@ -144,11 +144,12 @@
     "              'action_space': args.action_space,\n",
     "              'k_steps': args.k_steps,\n",
     "              'n_simulations': args.n_simulations,\n",
+    "              'max_game_length': args.max_game_length,\n",
     "              'c_puct': args.c_puct,\n",
     "              'batch_size': args.batch_size,\n",
     "              'learning_rate': args.learning_rate,\n",
     "              'model': MuZeroNet(),\n",
-    "              'noise': args.noise,\n",
+    "              'noise': False, # Not using noise during play\n",
     "              'noise_alpha': args.noise_alpha,\n",
     "              'noise_epsilon': args.noise_epsilon,\n",
     "              'seed': args.seed,\n",
@@ -169,17 +170,27 @@
     "                  f'c_puct_{args.c_puct}_'\n",
     "                  f'batch_size_{args.batch_size}_'\n",
     "                  f'learning_rate_{args.learning_rate}_'\n",
-    "                  f'noise_{args.noise}_'\n",
+    "                  f'noise_{True}_' # Used noise during training\n",
     "                  f'noise_alpha_{args.noise_alpha}_'\n",
     "                  f'noise_epsilon_{args.noise_epsilon}_'\n",
     "                  f'.pth')\n",
     "\n",
-    "    sim.set_random_seed(device=device)\n",
+    "    sim.set_random_seed()\n",
+    "    sim.set_device()\n",
     "    sim.train.train_muzero(model_path=model_path)\n",
     "\n",
     "    sim.play.play()\n",
     "\n",
     "    return 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     sys.exit( main() )\n",
+    "\n",
+    "#     sim.play.play()\n",
+    "\n",
+    "#     return 0\n",
     "\n",
     "\n",
     "\n",
