--- a/test.ipynb
+++ b/test.ipynb
@@ -132,7 +132,8 @@
     "    parser.add_argument('--noise_alpha', type=float, default=0.3, help='Dirichlet noise alpha parameter (concentration)')\n",
     "    parser.add_argument('--noise_epsilon', type=float, default=0.25, help='Dirichlet noise epsilon parameter (mixing)')\n",
     "    parser.add_argument('--verbose', action='store_true', help=\"verbose output\")\n",
-    "    args = parser.parse_args()\n",
+    "    # args = parser.parse_args()\n",
+    "    args, unknown = parser.parse_known_args()\n",
     "    return args\n",
     "\n",
     "\n",
@@ -191,6 +192,18 @@
     "#     sim.play.play()\n",
     "\n",
     "#     return 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     main()\n",
+    "    # sys.exit( main() )\n",
+    "\n",
+    "main()\n",
+    "\n",
+    "    sim.play.play()\n",
+    "\n",
+    "    return 0\n",
     "\n",
     "\n",
     "\n",
