--- a/test.ipynb
+++ b/test.ipynb
@@ -134,6 +134,7 @@
     "    parser.add_argument('--verbose', action='store_true', help=\"verbose output\")\n",
     "    # args = parser.parse_args()\n",
     "    args, unknown = parser.parse_known_args()\n",
+    "    args.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "    return args\n",
     "\n",
     "\n",
@@ -153,6 +154,7 @@
     "              'noise': False, # Not using noise during play\n",
     "              'noise_alpha': args.noise_alpha,\n",
     "              'noise_epsilon': args.noise_epsilon,\n",
+    "              'device': args.device,\n",
     "              'seed': args.seed,\n",
     "              'verbose': args.verbose}\n",
     "    \n",
