--- a/test.ipynb
+++ b/test.ipynb
@@ -131,6 +131,7 @@
     "    parser.add_argument('--noise', action='store_true', help=\"Add Dirichlet noise to root node priors\")\n",
     "    parser.add_argument('--noise_alpha', type=float, default=0.3, help='Dirichlet noise alpha parameter (concentration)')\n",
     "    parser.add_argument('--noise_epsilon', type=float, default=0.25, help='Dirichlet noise epsilon parameter (mixing)')\n",
+    "    parser.add_argument('--save_every', type=int, default=int(1e4), help='Save model every n steps')\n",
     "    parser.add_argument('--verbose', action='store_true', help=\"verbose output\")\n",
     "    # args = parser.parse_args()\n",
     "    args, unknown = parser.parse_known_args()\n",
@@ -156,7 +157,8 @@
     "              'noise_epsilon': args.noise_epsilon,\n",
     "              'device': args.device,\n",
     "              'seed': args.seed,\n",
-    "              'verbose': args.verbose}\n",
+    "              'verbose': args.verbose,\n",
+    "              'save_every': args.save_every}\n",
     "    \n",
     "    grid = Grid(config=config)\n",
     "    search = SearchChess(config=config, grid=grid)\n",
