Train and load model on device.

--- a/test.ipynb
+++ b/test.ipynb
@@ -97,17 +97,18 @@
     "\n",
     "    device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
-    "    model_path = (f'muzero_chess_model_'\n",
-    "                  f'n_episodes_{args.n_episodes}_'\n",
-    "                  f'k_steps_{args.k_steps}_'\n",
-    "                  f'n_simulations_{args.n_simulations}_'\n",
-    "                  f'c_puct_{args.c_puct}_'\n",
-    "                  f'batch_size_{args.batch_size}_'\n",
-    "                  f'learning_rate_{args.learning_rate}_'\n",
-    "                  f'noise_{True}_' # Used noise during training\n",
-    "                  f'noise_alpha_{args.noise_alpha}_'\n",
-    "                  f'noise_epsilon_{args.noise_epsilon}_'\n",
-    "                  f'.pth')\n",
+    "    # model_path = (f'muzero_chess_model_'\n",
+    "    #               f'n_episodes_{args.n_episodes}_'\n",
+    "    #               f'k_steps_{args.k_steps}_'\n",
+    "    #               f'n_simulations_{args.n_simulations}_'\n",
+    "    #               f'c_puct_{args.c_puct}_'\n",
+    "    #               f'batch_size_{args.batch_size}_'\n",
+    "    #               f'learning_rate_{args.learning_rate}_'\n",
+    "    #               f'noise_{True}_' # Used noise during training\n",
+    "    #               f'noise_alpha_{args.noise_alpha}_'\n",
+    "    #               f'noise_epsilon_{args.noise_epsilon}_'\n",
+    "    #               f'.pth')\n",
+    "    model_path = 'models/model_ep_10000.pth'\n",
     "\n",
     "    sim.set_random_seed()\n",
     "    sim.set_device()\n",
